--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             
             <div class="title">
                 <h1>Cadastre-se</h1>
+                <button class="btn-entrar"><a href="login.html">Entrar</a></button>
                 <div class="barra"></div>
             </div>
 
@@ -88,7 +89,7 @@
                         </option>
                     </select>
                 </div>
-                <button>
+                <button class="btn-cadastro">
                     Cadastrar
                 </button>
             </form>
