--- a/ListarProfissional.html
+++ b/ListarProfissional.html
@@ -36,8 +36,8 @@
         </thead>
       </table>
       <div class="botoes-container">
-        <button class="btn" onclick="editarProfissional()">Editar Profissional</button>
-        <button class="btn" onclick="excluirProfissional()">Excluir Profissional</button>
+        <button class="btn" onclick="editarProfissional()">Editar cadastro</button>
+        <button class="btn" onclick="excluirProfissional()">Excluir Cadastro</button>
     </div>
 </body>
 </html>
